add posts and images

--- a/_posts/2022-10-02-welcome.md
+++ b/_posts/2022-10-02-welcome.md
@@ -1,8 +1,13 @@
 ---
 layout: post
-title: "Welcome"
+title: "Welcome to my life!"
 date: 2022-10-02 14:29:44 +1100
 categories: jekyll update
 ---
 
 My name is Tracy Quick. I live on a remote farm in Western NSW Australia.
+We breed Murray Grey cattle \
+![mooMoos](/images/mgCattle.jpg)
+
+Its spring here, so our girls are calving \
+![babies](/images/mgCalf.jpg)
