--- a/_posts/2022-10-02-welcome.md
+++ b/_posts/2022-10-02-welcome.md
@@ -7,7 +7,7 @@ categories: jekyll update
 
 My name is Tracy Quick. I live on a remote farm in Western NSW Australia.
 We breed Murray Grey cattle \
-![mooMoos](MyProject/images/mgCattle.jpg)
+![mooMoos](/images/mgCattle.jpg)
 
 Its spring here, so our girls are calving \
-![babies](MyProject/images/mgCalf.jpg)
+![babies](/images/mgCalf.jpg)
