--- a/_posts/2022-10-02-welcome.md
+++ b/_posts/2022-10-02-welcome.md
@@ -5,7 +5,7 @@ date: 2022-10-02 14:29:44 +1100
 categories: jekyll update
 ---
 
-My name is Tracy Quick. I live on a remote farm in Western NSW Australia.
+My name is Tracy Quick. I live on an isolated farm in Western NSW Australia.
 We breed Murray Grey cattle \
 ![mooMoos](/assets/mgCattle.jpg)
 
