--- a/_posts/2022-10-02-welcome.md
+++ b/_posts/2022-10-02-welcome.md
@@ -7,7 +7,7 @@ categories: jekyll update
 
 My name is Tracy Quick. I live on an isolated farm in Western NSW Australia.
 We breed Murray Grey cattle \
-![mooMoos](/assets/mgCattle.jpg)
+![mooMoos](\assets\mgCattle.jpg)
 
 Its spring here, so our girls are calving \
-![babies](/assets/mgCalf.jpg)
+![babies](\assets\mgCalf.jpg)
