change to Htags

--- a/_posts/2022-10-05-hobbies.md
+++ b/_posts/2022-10-05-hobbies.md
@@ -6,4 +6,4 @@ categories: jekyll update
 ---
 
 Errrrr.... None \
-![LOL](/assets/laugh.gif)
+<img src="{{ "/assets/laugh.gif" | prepend: site.baseurl | prepend: site.url}}" alt="laugh" />
