--- a/_posts/2022-10-02-welcome.md
+++ b/_posts/2022-10-02-welcome.md
@@ -7,7 +7,7 @@ categories: jekyll update
 
 My name is Tracy Quick. I live on an isolated farm in Western NSW Australia.
 We breed Murray Grey cattle \
-![mooMoos](../../../../../assets/mgCattle.jpg)
+<img src="{{ "/assets/mgCattle.jpg" | prepend: site.baseurl | prepend: site.url}}" alt="MooMoos" />
 
 Its spring here, so our girls are calving \
-![babies](./assets/mgCalf.jpg)
+<img src="{{ "/assets/mgCalf.jpg" | prepend: site.baseurl | prepend: site.url}}" alt="Babies" />
