--- a/_posts/2022-10-06-next.md
+++ b/_posts/2022-10-06-next.md
@@ -9,3 +9,4 @@ Time to finish this assessment
 BYE \
 
 ![Bye](/assets/bye.gif)
+<img src="{{ "/assets/bye.gif" | prepend: site.baseurl | prepend: site.url}}" alt="BYE" />
